--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://editor.p5js.org/ihua7/full/JrMFGne7n"><button>Ex10: bonus</button></a>
         <a href="https://editor.p5js.org/ihua7/full/8_cbjhelD"><button>Ex13: Arrays</button></a>
         <a href="https://ihua7.github.io/exercise-14/"><button>Ex14: Grid</button></a>
-        <a href=""><button disabled>Final Proj</button></a>
+        <a href="https://ihua7.github.io/daily-dashboard/"><button>Final: Daily Dashboard</button></a>
     </div>
 </body>
 </html>
